hphp/hack/test/typecheck/static_meth_with_class_generics.php.exp
File "static_meth_with_class_generics.php", line 5, characters 3-58:
Static methods cannot use generics reified at the class level. Try reifying them at the static method itself. (Typing[4358])
File "static_meth_with_class_generics.php", line 5, characters 30-30:
Class-level reified generic used here.
File "static_meth_with_class_generics.php", line 5, characters 3-58:
Static methods cannot use generics reified at the class level. Try reifying them at the static method itself. (Typing[4358])
File "static_meth_with_class_generics.php", line 5, characters 37-37:
Class-level reified generic used here.
